fix(vlc): fix vlc setup
Signed-off-by: maxrave-dev <ndtminh2608@gmail.com>